--- a/Miles Website/WebsiteProject.html
+++ b/Miles Website/WebsiteProject.html
@@ -10,7 +10,7 @@
   <!-- build menu here -->
   <ul class="menu">
   	<!--link to the home page. -->
-  	<li><a href="index.html">Home</a></li>
+  	<li><a href="WebsiteProject.html">Home</a></li>
      <li><a href="works.html">Works</a></li>
   	<li><a href="bio.html">Bio</a></li>
   	<li><a href="contact.html">Contact</a></li>
@@ -18,8 +18,11 @@
   <h1>Miles Walter</h1>
   <h2>composer</h2>
 
+
 <div>
+  <img src="Miles.jpg">
+</div>
+
 
 </body>
-
 </html>
