--- a/Miles Website/works.html
+++ b/Miles Website/works.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="WebsiteProject.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://fonts.googleapis.com/css?family=Federo" rel="stylesheet">
 	<title>works</title>
 </head>
@@ -9,7 +9,7 @@
 <body>
 	<ul class="menu">
  
-  	<li><a href="WebsiteProject.html">Home</a></li>
+  	<li><a href="index.html">Home</a></li>
     <li><a href="works.html">Works</a></li>
   	<li><a href="bio.html">Bio</a></li>
   	<li><a href="contact.html">Contact</a></li>
