--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <div>
-  <img src="ADDA-html-css/Miles.jpg">
+  <img src="https://raw.githubusercontent.com/clairewalter/ADDA-html-css/master/Miles.jpg">
 </div>
 
 
